<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    android:orientation="vertical">
    <include layout="@layout/activity_base_title_bar"></include>
    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/backgroundcolor"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:background="@color/backgroundcolor"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/rl_1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/white">
                <ImageView
                    android:layout_centerVertical="true"
                    android:id="@+id/certification_head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/default_head"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="30dp"/>
                <LinearLayout
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/certification_head"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:paddingBottom="5dp"
                        android:textColor="@color/textcolor"
                        android:text="@string/certification_myselfpicture"
                        />
                    <TextView
                        android:paddingTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:textColor="@color/gray"
                        android:text="@string/certification_myselfpicture_desc"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/grays">
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_below="@+id/rl_1"
                android:id="@+id/rl_2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/white">
                <ImageView
                    android:id="@+id/certification_doc"
                    android:layout_centerVertical="true"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/pic"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="15dp"/>
                <LinearLayout
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/certification_doc"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/cetifi_tv_img1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:paddingBottom="5dp"
                        android:textColor="@color/textcolor"
                        android:text="@string/certification_doc_certifica"
                        />
                    <TextView
                        android:paddingTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:textColor="@color/gray"
                        android:text="@string/certification_certificate_desc"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/grays">
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_below="@+id/rl_2"
                android:id="@+id/rl_3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/white">
                <ImageView
                    android:id="@+id/certification_heart"
                    android:layout_centerVertical="true"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:src="@mipmap/pic"
                    android:scaleType="fitXY"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="15dp"/>
                <LinearLayout
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/certification_heart"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/cetifi_tv_img2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:paddingBottom="5dp"
                        android:textColor="@color/textcolor"
                        android:text="@string/certification_zhichen_certificate"
                        />
                    <TextView
                        android:paddingTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:textColor="@color/gray"
                        android:text="@string/certification_certificate_desc"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/grays">
                </LinearLayout>
            </RelativeLayout>
            <TextView
                android:layout_below="@+id/rl_3"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="o以上信息仅作认证使用,不会公开!"/>
            <Button
                android:layout_below="@+id/rl_3"
                android:layout_marginTop="50dp"
                android:layout_width="200dp"
                android:id="@+id/btn_certifi"
                android:layout_height="wrap_content"
                android:text="提交审核"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:background="@drawable/bg_button"/>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>